--- a/part1/src/importing.Rmd
+++ b/part1/src/importing.Rmd
@@ -13,6 +13,10 @@ suppressMessages(suppressWarnings(library(knitr)))
 suppressMessages(suppressWarnings(library(magrittr)))
 ```
 
+### Test
+
+![](../images/test-tilde.png)
+
 ### Importing choices (1 of 2)
 + A wide range of formats
   + Space delimited
